[ADD] Support Core Files And Header

--- a/Chromy/Chromy/Chromy.csproj
+++ b/Chromy/Chromy/Chromy.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="core\DPAPI.cs" />
+    <Compile Include="core\ProgressBar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
